--- a/assets/_sass/style.scss
+++ b/assets/_sass/style.scss
@@ -1,46 +1,84 @@
 $primary-color: #d32f2f;
+$primary-dark-color: #b71c1c;
+$primary-light-color: #ffebee;
 $secondary-color: #ffffff;
-$accent-color: #f44336;
-$text-color: #212121;
+$text-color: #111;
 
 body {
-    background-color: $secondary-color;
+    font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: $text-color;
+    background-color: $secondary-color;
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-feature-settings: "kern" 1;
+    -moz-font-feature-settings: "kern" 1;
+    -o-font-feature-settings: "kern" 1;
+    font-feature-settings: "kern" 1;
+    font-kerning: normal;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 a {
-    color: $accent-color;
+    color: $primary-color;
     text-decoration: none;
 
+    &:visited {
+        color: $primary-dark-color;
+    }
+
     &:hover {
-        color: $primary-color;
+        color: $text-color;
         text-decoration: underline;
     }
 }
 
-header {
-    background-color: $primary-color;
-    color: $secondary-color;
-    padding: 1rem;
-    text-align: center;
+blockquote {
+    color: $primary-dark-color;
+    border-left: 4px solid $primary-color;
+    padding-left: 15px;
+    font-size: 18px;
+    letter-spacing: -1px;
+    font-style: italic;
 }
 
-footer {
-    background-color: $primary-color;
-    color: $secondary-color;
-    padding: 1rem;
-    text-align: center;
+pre,
+code {
+    font-size: 15px;
+    border: 1px solid $primary-color;
+    border-radius: 3px;
+    background-color: $primary-light-color;
 }
 
-button {
-    background-color: $accent-color;
-    color: $secondary-color;
-    border: none;
-    border-radius: 4px;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
+.site-header {
+    border-top: 5px solid $primary-dark-color;
+    border-bottom: 1px solid $primary-color;
+    min-height: 55.95px;
+    position: relative;
+}
 
-    &:hover {
-        background-color: $primary-color;
+.site-title {
+    color: $primary-dark-color;
+}
+
+.site-footer {
+    border-top: 1px solid $primary-color;
+    padding: 30px 0;
+    background-color: $primary-light-color;
+}
+
+.footer-heading {
+    color: $primary-dark-color;
+}
+
+.post-title {
+    color: $primary-color;
+}
+
+.highlight {
+    background: $primary-light-color;
+
+    &.highlighter-rouge {
+        background: $primary-light-color;
     }
 }
