--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,7 @@
-@import "{{ site.theme }}";
+
+@import
+  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
+  "minima/initialize";
 
 $primary-color: #d32f2f;
 $primary-dark-color: #b71c1c;
