--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,7 +1,5 @@
 
-@import
-  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
-  "minima/initialize";
+@import "minima";
 
 $primary-color: #d32f2f;
 $primary-dark-color: #b71c1c;
